:bug: - style: fix unintended spacing in DataGrid component

--- a/src/components/form/dateinput/dateinput.scss
+++ b/src/components/form/dateinput/dateinput.scss
@@ -5,6 +5,7 @@
     opacity: 0;
     position: absolute;
     visibility: hidden;
+    width: 0;
     z-index: -10;
   }
 
